[package]
name = "gpn-tron-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.6.2"
humantime = "2.1.0"
#async-std = {version = "1.12.0", features = ["attributes"]}
grid = "0.10.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics", ] }
rand = "0.8.5"
